--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- MY CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- Icon Website -->
+    <link rel="icon" href="assets/img/Logo LDF/1628002926966.svg" type="image/ico" />
 
     <title>LDK AL-KAUSAR</title>
   </head>
@@ -18,7 +20,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><b>LDK AL-KAUSAR</b></a>
+        <a class="navbar-brand" href="#"><img src="assets/img/Logo LDF/1628002926966.svg" width="30" height="30" class="d-inline-block align-top rounded mr-2" alt="Logo" /><b> AL-KAUSAR</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
