--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <!-- Icon Website -->
     <link rel="icon" href="assets/img/Logo LDF/1628002926966.svg" type="image/ico" />
 
-    <title>LDK AL-KAUSAR</title>
+    <title>LDK AL-KAUTSAR</title>
   </head>
   <body>
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="assets/img/Logo LDF/1628002926966.svg" width="30" height="30" class="d-inline-block align-top rounded mr-2" alt="Logo" /><b> AL-KAUSAR</b></a>
+        <a class="navbar-brand" href="#"><img src="assets/img/Logo LDF/1628002926966.svg" width="30" height="30" class="d-inline-block align-top rounded mr-2" alt="Logo" /><b> AL-KAUTSAR</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -58,7 +58,7 @@
         <div class="row">
           <div class="col-6-md" id="pertama">
             <h4>Hi, Selamat Datang</h4>
-            <h1 class="text-primary"><b>LDK AL-KAUSAR</b></h1>
+            <h1 class="text-primary"><b>LDK AL-KAUTSAR</b></h1>
             <h3>Universitas Malikussaleh</h3>
           </div>
           <div class="col-6-lg d-none d-md-block ml-4" id="kedua">
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="col text-center text-white">
             <h2 id="ldff">
-              Lembaga Dakwah Kampus <br />
+              Lembaga Dakwah Fakultas <br />
               di Lingkup Universitas Malikussaleh
             </h2>
           </div>
@@ -102,7 +102,7 @@
         <div class="row mt-5">
           <div class="col-md text-center text-white" data-aos="fade-up" data-aos-offset="400" data-aos-duration="2000">
             <img src="assets/img/Logo LDF/ldf ekonomi.svg" alt="EKONOMI" width="50%" id="ekonomi" />
-            <h5>LDF AL-KAUTSAR</h5>
+            <h5>LDF BKM AL-KAUTSAR</h5>
             <h5>EKONOMI</h5>
           </div>
           <div class="col-md text-center text-white" data-aos="fade-up" data-aos-offset="400" data-aos-duration="2000">
