--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
           <a href="#" class="btn btn-primary stretched-link">Anggota</a>
         </div>
         <div class="col-md text-center mt-3" id="ldk">
-          <img src="assets/img/Pengurus LDK/Bendahara.svg" alt="Ketua Umum" width="80%" id="Bendahara"/>
+          <img src="assets/img/Pengurus LDK/DCM.svg" alt="Ketua Umum" width="80%" id="DCM"/>
+          <br/>
+          <a href="#" class="btn btn-primary stretched-link">Anggota</a>
         </div>
       </div>
     </div>
