--- a/index.html
+++ b/index.html
@@ -132,45 +132,45 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md text-center" id="ldk">
+        <div class="col-md text-center" data-aos="zoom-in-up" data-aos-offset="300" data-aos-duration="2000" id="ldk">
           <img src="assets/img/Pengurus LDK/Rizqon.svg" alt="Ketua Umum" width="70%" id="Rizqon"/>
         </div>
       </div>
       <div class="row mt-2">
-        <div class="col-md text-center" id="ldk">
+        <div class="col-md text-center" data-aos="zoom-in-up" data-aos-offset="360" data-aos-duration="2050" id="ldk">
           <img src="assets/img/Pengurus LDK/Sekretaris.svg" alt="Sekretaris" width="80%" id="Sekretaris"/>
         </div>
-        <div class="col-md text-center mt-3" id="ldk">
+        <div class="col-md text-center mt-3" data-aos="zoom-in-up" data-aos-offset="360" data-aos-duration="2050" id="ldk">
           <img src="assets/img/Pengurus LDK/Bendahara.svg" alt="Bendahara" width="80%" id="Bendahara"/>
         </div>
       </div>
       <div class="row mt-3">
-        <div class="col-md text-center" id="ldk">
+        <div class="col-md text-center" data-aos="zoom-in-up" data-aos-offset="400" data-aos-duration="2000" id="ldk">
           <img src="assets/img/Pengurus LDK/Kaderisasi.svg" alt="Kaderisasi" width="80%" id="Kaderisasi"/>
           <a href="#" class="btn btn-primary stretched-link">Anggota</a>
         </div> 
-        <div class="col-md text-center mt-3" id="ldk">
+        <div class="col-md text-center mt-3" data-aos="zoom-in-up" data-aos-offset="400" data-aos-duration="2000" id="ldk">
           <img src="assets/img/Pengurus LDK/Akademi Profesi.png" alt="Akademi Profesi" width="80%" id="Akademi"/>
           <br/>
           <a href="#" class="btn btn-primary stretched-link">Anggota</a>
         </div>
-        <div class="col-md text-center mt-3" id="ldk">
+        <div class="col-md text-center mt-3" data-aos="zoom-in-up" data-aos-offset="400" data-aos-duration="2000" id="ldk">
           <img src="assets/img/Pengurus LDK/DCM.svg" alt="DCM" width="80%" id="DCM"/>
           <br/>
           <a href="#" class="btn btn-primary stretched-link">Anggota</a>
         </div>
       </div>
       <div class="row mt-3">
-        <div class="col-md text-center" id="ldk">
+        <div class="col-md text-center" data-aos="zoom-in-up" data-aos-offset="450" data-aos-duration="2000" id="ldk">
           <img src="assets/img/Pengurus LDK/Syi'ar.svg" alt="Syi'ar" width="80%" id="Syiar"/>
           <a href="#" class="btn btn-primary stretched-link">Anggota</a>
         </div> 
-        <div class="col-md text-center mt-3" id="ldk">
+        <div class="col-md text-center mt-3" data-aos="zoom-in-up" data-aos-offset="450" data-aos-duration="2000" id="ldk">
           <img src="assets/img/Pengurus LDK/Dana Usaha.svg" alt="Dana Usaha" width="80%" id="DanaUsaha"/>
           <br/>
           <a href="#" class="btn btn-primary stretched-link">Anggota</a>
         </div>
-        <div class="col-md text-center mt-3" id="ldk">
+        <div class="col-md text-center mt-3" data-aos="zoom-in-up" data-aos-offset="450" data-aos-duration="2000" id="ldk">
           <img src="assets/img/Pengurus LDK/Kemuslimahan.svg" alt="Kemuslimahan" width="80%" id="Kemuslimahan"/>
           <br/>
           <a href="#" class="btn btn-primary stretched-link">Anggota</a>
