--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="col-md text-center text-white" data-aos="fade-up" data-aos-offset="300" data-aos-duration="2000">
             <img src="assets/img/Logo LDF/logo yg baru.svg" alt="FUAT" width="60%" id="ldf" />
             <h5>LDF FUAT AL-MUTTAQIN</h5>
-            <h5>TEKNIK/FKIP</h5>
+            <h5>TEKNIK/KIP</h5>
           </div>
           <div class="col-md text-center text-white" data-aos="fade-up" data-aos-offset="300" data-aos-duration="2000">
             <img src="assets/img/Logo LDF/ldf hukum.png" alt="HUKUM" width="50%" id="hukum" />
@@ -126,8 +126,8 @@
       <div class="row">
         <div class="col-md text-center">
           <h2>
-            Pengurus LDK AL-KAUSAR <br />
-            Periode 2021/2022
+            Pengurus LDK AL-KAUTSAR <br />
+            Periode 2021
           </h2>
         </div>
       </div>
@@ -147,8 +147,18 @@
       <div class="row mt-3">
         <div class="col-md text-center" data-aos="zoom-in-up" data-aos-offset="400" data-aos-duration="2000" id="ldk">
           <img src="assets/img/Pengurus LDK/Kaderisasi.svg" alt="Kaderisasi" width="80%" id="Kaderisasi"/>
-          <a href="#" class="btn btn-primary stretched-link">Anggota</a>
-        </div> 
+          <br/>    
+          <h5>Anggota Kaderisasi</h5>       
+          <ol type="1" id="anggotakader">
+            <li>Dea Ananda Putra Sitorus</li>
+            <li>Zidny Aziz Tanjung</li>
+            <li>Daffa Ananda Azhar</li>
+            <li>Emitha Rani Br Nst</li>
+            <li>Annisa Br Parangin Angin</li>
+            <li>Elvina Moulidiya</li>
+          </ol>
+          </div>
+        <!-- Akademi Profesi -->
         <div class="col-md text-center mt-3" data-aos="zoom-in-up" data-aos-offset="400" data-aos-duration="2000" id="ldk">
           <img src="assets/img/Pengurus LDK/Akademi Profesi.png" alt="Akademi Profesi" width="80%" id="Akademi"/>
           <br/>
